# slideconvert

./: .dockerignore  .gitignore  README.md  captain-definition-frontend  captain-definition-worker  docker-compose.yml  package.json  run-backend.sh
apps/slideconvert-backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  README.md  captain-definition  main.py  pyproject.toml
apps/slideconvert-backend/app/: main.py
apps/slideconvert-backend/app/api/: routes.py
apps/slideconvert-backend/app/config/: cors.py  env.py
apps/slideconvert-backend/app/schemas/: __init__.py  docs.py  models.py  validators.py
apps/slideconvert-backend/app/utils/: r2.py  security.py  unoserver.py
apps/slideconvert-backend/app/workers/: convert.py
apps/slideconvert-web/: .env.example  Dockerfile  package.json  tailwind.config.ts
apps/slideconvert-web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/slideconvert-web/src/components/converter/: conversion-complete.tsx  conversion-progress.tsx  converter-flow.tsx  converter-section.tsx  file-dropzone.tsx  file-upload.tsx  index.ts  slide-converter.tsx
apps/slideconvert-web/src/components/home/: features-section.tsx  hero-section.tsx  home-page.tsx  index.ts  stats-section.tsx
apps/slideconvert-web/src/components/icons/: check-icon.tsx  index.ts  loading-indicator-icon.tsx  pdf-icon.tsx  upload-icon.tsx
apps/slideconvert-web/src/components/layout/: aurora-background.tsx
apps/slideconvert-web/src/components/ui/: animated-icons.tsx  (+5 more)
apps/slideconvert-web/src/lib/: api.ts  convert-file.ts  utils.ts
(+1 files in other folders)
